--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -82,6 +82,7 @@ pages=Seiten
 loading=Laden...
 addToDoc=In Dokument hinzufügen
 reset=Zurücksetzen
+apply=Apply
 
 legal.privacy=Datenschutz
 legal.terms=AGB
@@ -474,6 +475,10 @@ home.autoRedact.title=Automatisch zensieren/schwärzen
 home.autoRedact.desc=Automatisches Zensieren (Schwärzen) von Text in einer PDF-Datei basierend auf dem eingegebenen Text
 autoRedact.tags=zensieren,schwärzen
 
+home.redact.title=Manual Redaction
+home.redact.desc=Redacts a PDF based on selected text, drawn shapes and/or selected page(s)
+redact.tags=Redact,Hide,black out,black,marker,hidden,manual
+
 home.tableExtraxt.title=Tabelle extrahieren
 home.tableExtraxt.desc=Tabelle aus PDF in CSV extrahieren
 tableExtraxt.tags=CSV,tabelle,extrahieren
@@ -561,6 +566,7 @@ login.oauth2invalidRequest=ungültige Anfrage
 login.oauth2AccessDenied=Zugriff abgelehnt
 login.oauth2InvalidTokenResponse=Ungültige Token-Antwort
 login.oauth2InvalidIdToken=Ungültiges ID-Token
+login.relyingPartyRegistrationNotFound=No relying party registration found
 login.userIsDisabled=Benutzer ist deaktiviert, die Anmeldung ist mit diesem Benutzernamen derzeit gesperrt. Bitte wenden Sie sich an den Administrator.
 login.alreadyLoggedIn=Sie sind bereits an
 login.alreadyLoggedIn2=Geräten angemeldet. Bitte melden Sie sich dort ab und versuchen es dann erneut.
@@ -578,6 +584,31 @@ autoRedact.customPaddingLabel=Zensierten Bereich vergrößern
 autoRedact.convertPDFToImageLabel=PDF in PDF-Bild konvertieren (zum Entfernen von Text hinter dem Kasten)
 autoRedact.submitButton=Zensieren
 
+#redact
+redact.title=Manual Redaction
+redact.header=Manual Redaction
+redact.submit=Redact
+redact.textBasedRedaction=Text based Redaction
+redact.pageBasedRedaction=Page-based Redaction
+redact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
+redact.pageRedactionNumbers.title=Pages
+redact.pageRedactionNumbers.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
+redact.redactionColor.title=Redaction Color
+redact.export=Export
+redact.upload=Upload
+redact.boxRedaction=Box draw redaction
+redact.zoom=Zoom
+redact.zoomIn=Zoom in
+redact.zoomOut=Zoom out
+redact.nextPage=Next Page
+redact.previousPage=Previous Page
+redact.toggleSidebar=Toggle Sidebar
+redact.showThumbnails=Show Thumbnails
+redact.showDocumentOutline=Show Document Outline (double-click to expand/collapse all items)
+redact.showAttatchments=Show Attachments
+redact.showLayers=Show Layers (double-click to reset all layers to the default state)
+redact.colourPicker=Colour Picker
+redact.findCurrentOutlineItem=Find current outline item
 
 #showJS
 showJS.title=Javascript anzeigen
@@ -830,6 +861,7 @@ sign.first=Erste Seite
 sign.last=Letzte Seite
 sign.next=Nächste Seite
 sign.previous=Vorherige Seite
+sign.maintainRatio=Toggle maintain aspect ratio
 
 #repair
 repair.title=Reparieren
@@ -1041,6 +1073,7 @@ pdfToImage.grey=Graustufen
 pdfToImage.blackwhite=Schwarzweiß (Datenverlust möglich!)
 pdfToImage.submit=Umwandeln
 pdfToImage.info=Python ist nicht installiert. Erforderlich für die WebP-Konvertierung.
+pdfToImage.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
 
 
 #addPassword
@@ -1284,6 +1317,8 @@ splitByChapters.submit=PDF teilen
 fileChooser.click=Klicken
 fileChooser.or=oder
 fileChooser.dragAndDrop=Drag & Drop
+fileChooser.dragAndDropPDF=Drag & Drop PDF file
+fileChooser.dragAndDropImage=Drag & Drop Image file
 fileChooser.hoveredDragAndDrop=Datei(en) hierhin Ziehen & Fallenlassen
 
 #release notes
@@ -1327,4 +1362,3 @@ validateSignature.cert.version=Version
 validateSignature.cert.keyUsage=Schlüsselverwendung
 validateSignature.cert.selfSigned=Selbstsigniert
 validateSignature.cert.bits=bits
-peter=pan
