--- a/src/main/resources/messages_ga_IE.properties
+++ b/src/main/resources/messages_ga_IE.properties
@@ -82,6 +82,7 @@ pages=Pages
 loading=Loading...
 addToDoc=Add to Document
 reset=Reset
+apply=Apply
 
 legal.privacy=Privacy Policy
 legal.terms=Terms and Conditions
@@ -238,11 +239,13 @@ database.creationDate=Dáta Cruthaithe
 database.fileSize=Méid an Chomhaid
 database.deleteBackupFile=Scrios Comhad Cúltaca
 database.importBackupFile=Iompórtáil Comhad Cúltaca
+database.createBackupFile=Create Backup File
 database.downloadBackupFile=Íoslódáil an comhad cúltaca
 database.info_1=Agus sonraí á n-allmhairiú, tá sé ríthábhachtach an struchtúr ceart a chinntiú. Mura bhfuil tú cinnte faoina bhfuil ar siúl agat, iarr comhairle agus tacaíocht ó ghairmí. Féadfaidh earráid sa struchtúr a bheith ina chúis le mífheidhmeanna iarratais, suas go dtí agus lena n-áirítear an neamhábaltacht iomlán an t-iarratas a rith.
 database.info_2=Ní hionann ainm an chomhaid agus é á uaslódáil. Déanfar é a athainmniú ina dhiaidh sin chun an fhormáid backup_user_yyyyMMddHHmm.sql a leanúint, ag cinntiú go bhfuil coinbhinsiún ainmniúcháin comhsheasmhach ann.
 database.submit=Iompórtáil Cúltaca
 database.importIntoDatabaseSuccessed=D'éirigh leis an allmhairiú isteach sa bhunachar sonraí
+database.backupCreated=Database backup successful
 database.fileNotFound=Comhad gan aimsiú
 database.fileNullOrEmpty=Níor cheart go mbeadh an comhad ar neamhní nó folamh
 database.failedImportFile=Theip ar iompórtáil an chomhaid
@@ -472,6 +475,10 @@ home.autoRedact.title=Auto Redact
 home.autoRedact.desc=Auto Redacts (Blacks out) téacs i PDF bunaithe ar an téacs ionchuir
 autoRedact.tags=Dearg, Folaigh, dubh amach, dubh, marcóir, i bhfolach
 
+home.redact.title=Manual Redaction
+home.redact.desc=Redacts a PDF based on selected text, drawn shapes and/or selected page(s)
+redact.tags=Redact,Hide,black out,black,marker,hidden,manual
+
 home.tableExtraxt.title=Ó CSV go PDF
 home.tableExtraxt.desc=Sleachta Táblaí ó PDF agus é a thiontú go CSV
 tableExtraxt.tags=CSV, Eastóscadh Tábla, sliocht, tiontú
@@ -511,6 +518,10 @@ removeImagePdf.tags=Remove Image,Page operations,Back end,server side
 home.splitPdfByChapters.title=Split PDF by Chapters
 home.splitPdfByChapters.desc=Split a PDF into multiple files based on its chapter structure.
 splitPdfByChapters.tags=split,chapters,bookmarks,organize
+
+home.validateSignature.title=Validate PDF Signature
+home.validateSignature.desc=Verify digital signatures and certificates in PDF documents
+validateSignature.tags=signature,verify,validate,pdf,certificate,digital signature,Validate Signature,Validate certificate
 
 #replace-invert-color
 replace-color.title=Advanced Colour options
@@ -555,6 +566,7 @@ login.oauth2invalidRequest=Iarratas Neamhbhailí
 login.oauth2AccessDenied=Rochtain Diúltaithe
 login.oauth2InvalidTokenResponse=Freagra Comhartha Neamhbhailí
 login.oauth2InvalidIdToken=Comhartha Aitheantais Neamhbhailí
+login.relyingPartyRegistrationNotFound=No relying party registration found
 login.userIsDisabled=User is deactivated, login is currently blocked with this username. Please contact the administrator.
 login.alreadyLoggedIn=You are already logged in to
 login.alreadyLoggedIn2=devices. Please log out of the devices and try again.
@@ -572,6 +584,31 @@ autoRedact.customPaddingLabel=Stuáil Breise Saincheaptha
 autoRedact.convertPDFToImageLabel=Tiontaigh PDF go PDF-Image (Úsáidte chun téacs a bhaint taobh thiar den bhosca)
 autoRedact.submitButton=Cuir isteach
 
+#redact
+redact.title=Manual Redaction
+redact.header=Manual Redaction
+redact.submit=Redact
+redact.textBasedRedaction=Text based Redaction
+redact.pageBasedRedaction=Page-based Redaction
+redact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
+redact.pageRedactionNumbers.title=Pages
+redact.pageRedactionNumbers.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
+redact.redactionColor.title=Redaction Color
+redact.export=Export
+redact.upload=Upload
+redact.boxRedaction=Box draw redaction
+redact.zoom=Zoom
+redact.zoomIn=Zoom in
+redact.zoomOut=Zoom out
+redact.nextPage=Next Page
+redact.previousPage=Previous Page
+redact.toggleSidebar=Toggle Sidebar
+redact.showThumbnails=Show Thumbnails
+redact.showDocumentOutline=Show Document Outline (double-click to expand/collapse all items)
+redact.showAttatchments=Show Attachments
+redact.showLayers=Show Layers (double-click to reset all layers to the default state)
+redact.colourPicker=Colour Picker
+redact.findCurrentOutlineItem=Find current outline item
 
 #showJS
 showJS.title=Taispeáin Javascript
@@ -818,7 +855,13 @@ sign.save=Save Signature
 sign.personalSigs=Personal Signatures
 sign.sharedSigs=Shared Signatures
 sign.noSavedSigs=No saved signatures found
-
+sign.addToAll=Add to all pages
+sign.delete=Delete
+sign.first=First page
+sign.last=Last page
+sign.next=Next page
+sign.previous=Previous page
+sign.maintainRatio=Toggle maintain aspect ratio
 
 #repair
 repair.title=Deisiúchán
@@ -952,6 +995,19 @@ multiTool.split=Split
 multiTool.moveLeft=Move Left
 multiTool.moveRight=Move Right
 multiTool.delete=Delete
+multiTool.dragDropMessage=Page(s) Selected
+multiTool.undo=Undo
+multiTool.redo=Redo
+
+#decrypt
+decrypt.passwordPrompt=This file is password-protected. Please enter the password:
+decrypt.cancelled=Operation cancelled for PDF: {0}
+decrypt.noPassword=No password provided for encrypted PDF: {0}
+decrypt.invalidPassword=Please try again with the correct password.
+decrypt.invalidPasswordHeader=Incorrect password or unsupported encryption for PDF: {0}
+decrypt.unexpectedError=There was an error processing the file. Please try again.
+decrypt.serverError=Server error while decrypting: {0}
+decrypt.success=File decrypted successfully.
 
 #multiTool-advert
 multiTool-advert.message=This feature is also available in our <a href="{0}">multi-tool page</a>. Check it out for enhanced page-by-page UI and additional features!
@@ -1017,6 +1073,7 @@ pdfToImage.grey=Scála Liath
 pdfToImage.blackwhite=Dubh agus Bán (D’fhéadfadh sonraí a chailleadh!)
 pdfToImage.submit=Tiontaigh
 pdfToImage.info=Python is not installed. Required for WebP conversion.
+pdfToImage.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
 
 
 #addPassword
@@ -1044,6 +1101,7 @@ addPassword.submit=Criptigh
 #watermark
 watermark.title=Cuir Uisce leis
 watermark.header=Cuir Uisce leis
+watermark.customColor=Custom Text Colour
 watermark.selectText.1=Roghnaigh PDF chun comhartha uisce a chur leis:
 watermark.selectText.2=Téacs Comhartha Uisce:
 watermark.selectText.3=Méid cló:
@@ -1243,6 +1301,7 @@ removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
 
+
 splitByChapters.title=Split PDF by Chapters
 splitByChapters.header=Split PDF by Chapters
 splitByChapters.bookmarkLevel=Bookmark Level
@@ -1253,3 +1312,53 @@ splitByChapters.desc.2=Bookmark Level: Choose the level of bookmarks to use for 
 splitByChapters.desc.3=Include Metadata: If checked, the original PDF's metadata will be included in each split PDF.
 splitByChapters.desc.4=Allow Duplicates: If checked, allows multiple bookmarks on the same page to create separate PDFs.
 splitByChapters.submit=Split PDF
+
+#File Chooser
+fileChooser.click=Click
+fileChooser.or=or
+fileChooser.dragAndDrop=Drag & Drop
+fileChooser.dragAndDropPDF=Drag & Drop PDF file
+fileChooser.dragAndDropImage=Drag & Drop Image file
+fileChooser.hoveredDragAndDrop=Drag & Drop file(s) here
+
+#release notes
+releases.footer=Releases
+releases.title=Release Notes
+releases.header=Release Notes
+releases.current.version=Current Release
+releases.note=Release notes are only available in English
+
+#Validate Signature
+validateSignature.title=Validate PDF Signatures
+validateSignature.header=Validate Digital Signatures
+validateSignature.selectPDF=Select signed PDF file
+validateSignature.submit=Validate Signatures
+validateSignature.results=Validation Results
+validateSignature.status=Status
+validateSignature.signer=Signer
+validateSignature.date=Date
+validateSignature.reason=Reason
+validateSignature.location=Location
+validateSignature.noSignatures=No digital signatures found in this document
+validateSignature.status.valid=Valid
+validateSignature.status.invalid=Invalid
+validateSignature.chain.invalid=Certificate chain validation failed - cannot verify signer's identity
+validateSignature.trust.invalid=Certificate not in trust store - source cannot be verified
+validateSignature.cert.expired=Certificate has expired
+validateSignature.cert.revoked=Certificate has been revoked
+validateSignature.signature.info=Signature Information
+validateSignature.signature=Signature
+validateSignature.signature.mathValid=Signature is mathematically valid BUT:
+validateSignature.selectCustomCert=Custom Certificate File X.509 (Optional)
+validateSignature.cert.info=Certificate Details
+validateSignature.cert.issuer=Issuer
+validateSignature.cert.subject=Subject
+validateSignature.cert.serialNumber=Serial Number
+validateSignature.cert.validFrom=Valid From
+validateSignature.cert.validUntil=Valid Until
+validateSignature.cert.algorithm=Algorithm
+validateSignature.cert.keySize=Key Size
+validateSignature.cert.version=Version
+validateSignature.cert.keyUsage=Key Usage
+validateSignature.cert.selfSigned=Self-Signed
+validateSignature.cert.bits=bits
