--- a/src/main/resources/messages_vi_VN.properties
+++ b/src/main/resources/messages_vi_VN.properties
@@ -82,6 +82,7 @@ pages=Pages
 loading=Loading...
 addToDoc=Add to Document
 reset=Reset
+apply=Apply
 
 legal.privacy=Privacy Policy
 legal.terms=Terms and Conditions
@@ -238,11 +239,13 @@ database.creationDate=Ngày tạo
 database.fileSize=Kích thước tệp
 database.deleteBackupFile=Xóa tệp sao lưu
 database.importBackupFile=Nhập tệp sao lưu
+database.createBackupFile=Create Backup File
 database.downloadBackupFile=Tải xuống tệp sao lưu
 database.info_1=Khi nhập dữ liệu, điều quan trọng là phải đảm bảo cấu trúc chính xác. Nếu bạn không chắc chắn về những gì bạn đang làm, hãy tìm kiếm lời khuyên và hỗ trợ từ một chuyên gia. Lỗi trong cấu trúc có thể gây ra sự cố ứng dụng, thậm chí là không thể chạy ứng dụng hoàn toàn.
 database.info_2=Tên tệp không quan trọng khi tải lên. Nó sẽ được đổi tên sau đó để tuân theo định dạng backup_user_yyyyMMddHHmm.sql, đảm bảo quy ước đặt tên nhất quán.
 database.submit=Nhập bản sao lưu
 database.importIntoDatabaseSuccessed=Nhập vào cơ sở dữ liệu thành công
+database.backupCreated=Database backup successful
 database.fileNotFound=Không tìm thấy tệp
 database.fileNullOrEmpty=Tệp không được để trống hoặc rỗng
 database.failedImportFile=Không thể nhập tệp
@@ -472,6 +475,10 @@ home.autoRedact.title=Tự động biên tập
 home.autoRedact.desc=Tự động biên tập (Che đen) văn bản trong PDF dựa trên văn bản đầu vào
 autoRedact.tags=Biên tập,Ẩn,che đen,đen,bút đánh dấu,ẩn
 
+home.redact.title=Manual Redaction
+home.redact.desc=Redacts a PDF based on selected text, drawn shapes and/or selected page(s)
+redact.tags=Redact,Hide,black out,black,marker,hidden,manual
+
 home.tableExtraxt.title=PDF sang CSV
 home.tableExtraxt.desc=Trích xuất bảng từ PDF chuyển đổi thành CSV
 tableExtraxt.tags=CSV,Trích xuất bảng,trích xuất,chuyển đổi
@@ -511,6 +518,10 @@ removeImagePdf.tags=Remove Image,Page operations,Back end,server side
 home.splitPdfByChapters.title=Split PDF by Chapters
 home.splitPdfByChapters.desc=Split a PDF into multiple files based on its chapter structure.
 splitPdfByChapters.tags=split,chapters,bookmarks,organize
+
+home.validateSignature.title=Validate PDF Signature
+home.validateSignature.desc=Verify digital signatures and certificates in PDF documents
+validateSignature.tags=signature,verify,validate,pdf,certificate,digital signature,Validate Signature,Validate certificate
 
 #replace-invert-color
 replace-color.title=Advanced Colour options
@@ -555,6 +566,7 @@ login.oauth2invalidRequest=Yêu cầu không hợp lệ
 login.oauth2AccessDenied=Truy cập bị từ chối
 login.oauth2InvalidTokenResponse=Phản hồi token không hợp lệ
 login.oauth2InvalidIdToken=Id Token không hợp lệ
+login.relyingPartyRegistrationNotFound=No relying party registration found
 login.userIsDisabled=User is deactivated, login is currently blocked with this username. Please contact the administrator.
 login.alreadyLoggedIn=You are already logged in to
 login.alreadyLoggedIn2=devices. Please log out of the devices and try again.
@@ -572,6 +584,31 @@ autoRedact.customPaddingLabel=Đệm thêm tùy chỉnh
 autoRedact.convertPDFToImageLabel=Chuyển đổi PDF thành PDF-Hình ảnh (Dùng để xóa văn bản phía sau ô)
 autoRedact.submitButton=Gửi
 
+#redact
+redact.title=Manual Redaction
+redact.header=Manual Redaction
+redact.submit=Redact
+redact.textBasedRedaction=Text based Redaction
+redact.pageBasedRedaction=Page-based Redaction
+redact.convertPDFToImageLabel=Convert PDF to PDF-Image (Used to remove text behind the box)
+redact.pageRedactionNumbers.title=Pages
+redact.pageRedactionNumbers.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
+redact.redactionColor.title=Redaction Color
+redact.export=Export
+redact.upload=Upload
+redact.boxRedaction=Box draw redaction
+redact.zoom=Zoom
+redact.zoomIn=Zoom in
+redact.zoomOut=Zoom out
+redact.nextPage=Next Page
+redact.previousPage=Previous Page
+redact.toggleSidebar=Toggle Sidebar
+redact.showThumbnails=Show Thumbnails
+redact.showDocumentOutline=Show Document Outline (double-click to expand/collapse all items)
+redact.showAttatchments=Show Attachments
+redact.showLayers=Show Layers (double-click to reset all layers to the default state)
+redact.colourPicker=Colour Picker
+redact.findCurrentOutlineItem=Find current outline item
 
 #showJS
 showJS.title=Hiển thị Javascript
@@ -818,7 +855,13 @@ sign.save=Save Signature
 sign.personalSigs=Personal Signatures
 sign.sharedSigs=Shared Signatures
 sign.noSavedSigs=No saved signatures found
-
+sign.addToAll=Add to all pages
+sign.delete=Delete
+sign.first=First page
+sign.last=Last page
+sign.next=Next page
+sign.previous=Previous page
+sign.maintainRatio=Toggle maintain aspect ratio
 
 #repair
 repair.title=Sửa chữa
@@ -952,6 +995,19 @@ multiTool.split=Split
 multiTool.moveLeft=Move Left
 multiTool.moveRight=Move Right
 multiTool.delete=Delete
+multiTool.dragDropMessage=Page(s) Selected
+multiTool.undo=Undo
+multiTool.redo=Redo
+
+#decrypt
+decrypt.passwordPrompt=This file is password-protected. Please enter the password:
+decrypt.cancelled=Operation cancelled for PDF: {0}
+decrypt.noPassword=No password provided for encrypted PDF: {0}
+decrypt.invalidPassword=Please try again with the correct password.
+decrypt.invalidPasswordHeader=Incorrect password or unsupported encryption for PDF: {0}
+decrypt.unexpectedError=There was an error processing the file. Please try again.
+decrypt.serverError=Server error while decrypting: {0}
+decrypt.success=File decrypted successfully.
 
 #multiTool-advert
 multiTool-advert.message=This feature is also available in our <a href="{0}">multi-tool page</a>. Check it out for enhanced page-by-page UI and additional features!
@@ -1017,6 +1073,7 @@ pdfToImage.grey=Thang độ xám
 pdfToImage.blackwhite=Đen trắng (Có thể mất dữ liệu!)
 pdfToImage.submit=Chuyển đổi
 pdfToImage.info=Python is not installed. Required for WebP conversion.
+pdfToImage.placeholder=(e.g. 1,2,8 or 4,7,12-16 or 2n-1)
 
 
 #addPassword
@@ -1044,6 +1101,7 @@ addPassword.submit=Mã hóa
 #watermark
 watermark.title=Thêm hình mờ
 watermark.header=Thêm hình mờ
+watermark.customColor=Custom Text Colour
 watermark.selectText.1=Chọn PDF để thêm hình mờ:
 watermark.selectText.2=Văn bản hình mờ:
 watermark.selectText.3=Cỡ chữ:
@@ -1243,6 +1301,7 @@ removeImage.header=Remove image
 removeImage.removeImage=Remove image
 removeImage.submit=Remove image
 
+
 splitByChapters.title=Split PDF by Chapters
 splitByChapters.header=Split PDF by Chapters
 splitByChapters.bookmarkLevel=Bookmark Level
@@ -1253,3 +1312,53 @@ splitByChapters.desc.2=Bookmark Level: Choose the level of bookmarks to use for 
 splitByChapters.desc.3=Include Metadata: If checked, the original PDF's metadata will be included in each split PDF.
 splitByChapters.desc.4=Allow Duplicates: If checked, allows multiple bookmarks on the same page to create separate PDFs.
 splitByChapters.submit=Split PDF
+
+#File Chooser
+fileChooser.click=Click
+fileChooser.or=or
+fileChooser.dragAndDrop=Drag & Drop
+fileChooser.dragAndDropPDF=Drag & Drop PDF file
+fileChooser.dragAndDropImage=Drag & Drop Image file
+fileChooser.hoveredDragAndDrop=Drag & Drop file(s) here
+
+#release notes
+releases.footer=Releases
+releases.title=Release Notes
+releases.header=Release Notes
+releases.current.version=Current Release
+releases.note=Release notes are only available in English
+
+#Validate Signature
+validateSignature.title=Validate PDF Signatures
+validateSignature.header=Validate Digital Signatures
+validateSignature.selectPDF=Select signed PDF file
+validateSignature.submit=Validate Signatures
+validateSignature.results=Validation Results
+validateSignature.status=Status
+validateSignature.signer=Signer
+validateSignature.date=Date
+validateSignature.reason=Reason
+validateSignature.location=Location
+validateSignature.noSignatures=No digital signatures found in this document
+validateSignature.status.valid=Valid
+validateSignature.status.invalid=Invalid
+validateSignature.chain.invalid=Certificate chain validation failed - cannot verify signer's identity
+validateSignature.trust.invalid=Certificate not in trust store - source cannot be verified
+validateSignature.cert.expired=Certificate has expired
+validateSignature.cert.revoked=Certificate has been revoked
+validateSignature.signature.info=Signature Information
+validateSignature.signature=Signature
+validateSignature.signature.mathValid=Signature is mathematically valid BUT:
+validateSignature.selectCustomCert=Custom Certificate File X.509 (Optional)
+validateSignature.cert.info=Certificate Details
+validateSignature.cert.issuer=Issuer
+validateSignature.cert.subject=Subject
+validateSignature.cert.serialNumber=Serial Number
+validateSignature.cert.validFrom=Valid From
+validateSignature.cert.validUntil=Valid Until
+validateSignature.cert.algorithm=Algorithm
+validateSignature.cert.keySize=Key Size
+validateSignature.cert.version=Version
+validateSignature.cert.keyUsage=Key Usage
+validateSignature.cert.selfSigned=Self-Signed
+validateSignature.cert.bits=bits
